--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/bloodflower.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/bloodflower.yml
@@ -38,7 +38,7 @@
   - !type:CP14AffectSolutionTemperature
     addTemperature: -119
 
-#  Blood brewing
+#  Essence brewing
 
 - type: reaction
   id: CP14BloodFlowerBrewingEssenceHuman
@@ -53,8 +53,8 @@
       amount: 0.25
   products:
     CP14BasicEffectHealBrute: 0.50
-    CP14BasicEffectBloodRestore: 0.50
-    CP14BasicEffectImpurity: 0.25
+    CP14BasicEffectImpurity: 0.5
+    CP14BasicEffectBloodRestore: 0.25
   effects:
   - !type:CP14AffectSolutionTemperature
     addTemperature: -200
@@ -71,8 +71,8 @@
     CP14AlchemistSalt:
       amount: 0.25
   products:
-    CP14BasicEffectHealCold: 0.75
-    CP14BasicEffectImpurity: 0.5
+    CP14BasicEffectImpurity: 0.75
+    CP14BasicEffectHealCold: 0.5
     CP14BasicEffectHealHeat: 0.25
   effects:
   - !type:CP14AffectSolutionTemperature
