--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/wild_sage.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/wild_sage.yml
@@ -11,7 +11,7 @@
       amount: 1
   products:
     CP14BasicEffectEmpty: 0.75
-    CP14BasicEffectHealBrute: 0.5
+    CP14BasicEffectHealBrute: 0.25
     CP14BasicEffectEmoteCough: 0.25
   cp14RandomProducts:
   - CP14BasicEffectRainbow: 0.25
@@ -20,6 +20,8 @@
     CP14BasicEffectHealPoison: 0.25
   - CP14BasicEffectEmoteCough: 0.25
     CP14BasicEffectHealPoison: 0.25
+  - CP14BasicEffectImpurity: 0.25
+    CP14BasicEffectEmpty: 0.25
   effects:
   - !type:CP14AffectSolutionTemperature
     addTemperature: -250
