--- a/Resources/Prototypes/_CP14/Reagents/Precurser/arcane.yml
+++ b/Resources/Prototypes/_CP14/Reagents/Precurser/arcane.yml
@@ -2,7 +2,7 @@
 
 - type: reagent
   id: CP14ChromiumSlime
-  group: CP14Archaic
+  group: CP14Arcane
   name: cp14-reagent-name-chromium-slime
   desc: cp14-reagent-desc-chromium-slime
   flavor: CP14Vomit
