--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/dinosaurs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/dinosaurs.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: CP14MobDino
-  parent: SimpleMobBase
+  parent: CP14SimpleMobBase
   name: dino
   abstract: true
   components:
