--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/mole.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/mole.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: CP14MobMonsterMole
-  parent: SimpleMobBase
+  parent: CP14SimpleMobBase
   name: predatory mole
   description: Hunts in the dark and loves the taste of meat and blood in its mouth.
   categories: [ ForkFiltered ]
