--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/goblin.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/goblin.yml
@@ -23,8 +23,8 @@
   - type: Butcherable
     butcheringType: Spike
     spawned:
-      - id: FoodMeatHuman
-        amount: 5
+      - id: CP14FoodMeatHuman
+        amount: 3
   - type: Body
     prototype: CP14Human
     requiredLegs: 2
