--- a/Resources/Prototypes/_CP14/Entities/Clothing/Belt/quiver.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Belt/quiver.yml
@@ -33,13 +33,24 @@
 
 - type: entity
   parent: CP14ClothingBeltQuiver
-  id: CP14ClothingBeltQuiverArrow
+  id: CP14ClothingBeltQuiverIronArrow
   categories: [ ForkFiltered ]
-  suffix: Full. Arrow
+  suffix: Full. Iron. Arrow
   components:
   - type: StorageFill
     contents:
-      - id: CP14Arrow
+      - id: CP14ModularIronArrow
+        amount: 16
+
+- type: entity
+  parent: CP14ClothingBeltQuiver
+  id: CP14ClothingBeltQuiverMithrilArrow
+  categories: [ ForkFiltered ]
+  suffix: Full. Mithril. Arrow
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14ModularMithrilArrow
         amount: 16
 
 - type: entity
