--- a/Resources/Prototypes/_CP14/Entities/Clothing/Shirt/Roles/general.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Shirt/Roles/general.yml
@@ -249,3 +249,13 @@
     sprite: _CP14/Clothing/Shirt/Roles/General/Dress/green_belt2_dress.rsi
   - type: Clothing
     sprite: _CP14/Clothing/Shirt/Roles/General/Dress/green_belt2_dress.rsi
+
+- type: entity
+  parent: CP14ClothingShirtBase
+  id: CP14ClothinGreenLightDress
+  name: light green dress
+  components:
+  - type: Sprite
+    sprite: _CP14/Clothing/Shirt/Roles/General/Dress/light_green_dress.rsi
+  - type: Clothing
+    sprite: _CP14/Clothing/Shirt/Roles/General/Dress/light_green_dress.rsi
