--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Medical/healing.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Medical/healing.yml
@@ -3,11 +3,11 @@
   parent: BaseItem
   name: herbal bandage
   description: A bandage net woven from grass, not the most reliable or useful thing, but better than nothing.
-  suffix: 10
+  suffix: 5
   categories: [ ForkFiltered ]
   components:
   - type: Item
-    size: Small
+    size: Normal
   - type: Sprite
     sprite: _CP14/Objects/Specific/Medical/medical.rsi
     state: herbbandage_3
@@ -32,7 +32,7 @@
       path: "/Audio/Items/Medical/brutepack_end.ogg"
   - type: Stack
     stackType: CP14HerbalBandage
-    count: 10
+    count: 5
     baseLayer: base
     layerStates:
     - herbbandage
@@ -54,11 +54,11 @@
   parent: BaseItem
   name: gauze
   description: Dense cloth gauze, to prevent valuable blood from leaking out of the body.
-  suffix: 10
+  suffix: 5
   categories: [ ForkFiltered ]
   components:
   - type: Item
-    size: Small
+    size: Normal
   - type: Sprite
     sprite: _CP14/Objects/Specific/Medical/medical.rsi
     state: bandage_3
@@ -83,7 +83,7 @@
       path: "/Audio/Items/Medical/brutepack_end.ogg"
   - type: Stack
     stackType: CP14Gauze
-    count: 10
+    count: 5
     baseLayer: base
     layerStates:
     - bandage
