--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
@@ -13,7 +13,7 @@
     CP14ChromiumSlime:
       amount: 1
   products:
-    CP14BasicEffectSimpleBase: 1
+    CP14BasicEffectEmpty: 1
   effects:
   - !type:CP14InverseEffect
     inversion:
