--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
@@ -4,46 +4,46 @@
 # Rules:
 # 1) all values must be multiples of 0.25
 
-- type: reaction
-  id: CP14ChromiumInverseEffect
-  quantized: true
-  minTemp: 350
-  conserveEnergy: false
-  reactants:
-    CP14ChromiumSlime:
-      amount: 1
-  products:
-    CP14BasicEffectEmpty: 1
-  effects:
-  - !type:CP14InverseEffect
-    inversion:
-      CP14BasicEffectHealBrute: CP14BasicEffectDamageBrute
-      CP14BasicEffectDamageBrute: CP14BasicEffectHealBrute
-      #
-      CP14BasicEffectHealPoison: CP14BasicEffectDamagePoison
-      CP14BasicEffectDamagePoison: CP14BasicEffectHealPoison
-      #
-      CP14BasicEffectDamageCold: CP14BasicEffectHealCold
-      CP14BasicEffectHealCold: CP14BasicEffectDamageCold
-      #
-      CP14BasicEffectSatiateHunger: CP14BasicEffectVomit
-      CP14BasicEffectSatiateThirst: CP14BasicEffectSatiateHunger
-      CP14BasicEffectVomit: CP14BasicEffectSatiateThirst
-      #
-      CP14BasicEffectDamageMana: CP14BasicEffectHealMana
-      CP14BasicEffectHealMana: CP14BasicEffectDamageMana
-      #
-      CP14BasicEffectBloodAbsorption: CP14BasicEffectBloodRestore
-      CP14BasicEffectBloodRestore: CP14BasicEffectBloodAbsorption
-      #
-      CP14BasicEffectSpeedDown: CP14BasicEffectSpeedUp
-      CP14BasicEffectSpeedUp: CP14BasicEffectSpeedDown
-      #
-      CP14BasicEffectDamageAirloss: CP14BasicEffectHealAirloss
-      CP14BasicEffectHealAirloss: CP14BasicEffectDamageAirloss
-      #
-      #CP14BasicEffectRainbow: 
-      #CP14BasicEffectEmoteCough:
+#- type: reaction
+#  id: CP14ChromiumInverseEffect
+#  quantized: true
+#  minTemp: 350
+#  conserveEnergy: false
+#  reactants:
+#    CP14ChromiumSlime:
+#      amount: 1
+#  products:
+#    CP14BasicEffectSimpleBase: 1
+#  effects:
+#  - !type:CP14InverseEffect
+#    inversion:
+#      CP14BasicEffectHealBrute: CP14BasicEffectDamageBrute
+#      CP14BasicEffectDamageBrute: CP14BasicEffectHealBrute
+#      #
+#      CP14BasicEffectHealPoison: CP14BasicEffectDamagePoison
+#      CP14BasicEffectDamagePoison: CP14BasicEffectHealPoison
+#      #
+#      CP14BasicEffectDamageCold: CP14BasicEffectHealCold
+#      CP14BasicEffectHealCold: CP14BasicEffectDamageCold
+#      #
+#      CP14BasicEffectSatiateHunger: CP14BasicEffectVomit
+#      CP14BasicEffectSatiateThirst: CP14BasicEffectSatiateHunger
+#      CP14BasicEffectVomit: CP14BasicEffectSatiateThirst
+#      #
+#      CP14BasicEffectDamageMana: CP14BasicEffectHealMana
+#      CP14BasicEffectHealMana: CP14BasicEffectDamageMana
+#      #
+#      CP14BasicEffectBloodAbsorption: CP14BasicEffectBloodRestore
+#      CP14BasicEffectBloodRestore: CP14BasicEffectBloodAbsorption
+#      #
+#      CP14BasicEffectSpeedDown: CP14BasicEffectSpeedUp
+#      CP14BasicEffectSpeedUp: CP14BasicEffectSpeedDown
+#      #
+#      CP14BasicEffectDamageAirloss: CP14BasicEffectHealAirloss
+#      CP14BasicEffectHealAirloss: CP14BasicEffectDamageAirloss
+#      #
+#      #CP14BasicEffectRainbow: 
+#      #CP14BasicEffectEmoteCough:
 
 # Simple brewing
 
