--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
@@ -51,6 +51,9 @@
     maxTransferAmount: 10
     transferAmount: 1
     toggleState: 1 # draw
+  - type: Tag
+    tags:
+    - CP14Vial
 
 - type: entity
   parent: CP14BaseVial
