--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
@@ -19,31 +19,31 @@
     inversion:
       CP14BasicEffectHealBrute: CP14BasicEffectDamageBrute
       CP14BasicEffectDamageBrute: CP14BasicEffectHealBrute
-
+      #
       CP14BasicEffectHealPoison: CP14BasicEffectDamagePoison
       CP14BasicEffectDamagePoison: CP14BasicEffectHealPoison
-
+      #
       CP14BasicEffectDamageCold: CP14BasicEffectHealCold
       CP14BasicEffectHealCold: CP14BasicEffectDamageCold
-
+      #
       CP14BasicEffectSatiateHunger: CP14BasicEffectVomit
       CP14BasicEffectSatiateThirst: CP14BasicEffectSatiateHunger
       CP14BasicEffectVomit: CP14BasicEffectSatiateThirst
-
+      #
       CP14BasicEffectDamageMana: CP14BasicEffectHealMana
       CP14BasicEffectHealMana: CP14BasicEffectDamageMana
-
+      #
       CP14BasicEffectBloodAbsorption: CP14BasicEffectBloodRestore
       CP14BasicEffectBloodRestore: CP14BasicEffectBloodAbsorption
-
+      #
       CP14BasicEffectSpeedDown: CP14BasicEffectSpeedUp
       CP14BasicEffectSpeedUp: CP14BasicEffectSpeedDown
-
+      #
       CP14BasicEffectDamageAirloss: CP14BasicEffectHealAirloss
       CP14BasicEffectHealAirloss: CP14BasicEffectDamageAirloss
-
-      CP14BasicEffectRainbow: 
-      CP14BasicEffectEmoteCough:
+      #
+    # CP14BasicEffectRainbow: 
+    # CP14BasicEffectEmoteCough:
   
 # Simple brewing
 
