--- a/Resources/Prototypes/_CP14/Guidebook/Eng/alchemy.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/Eng/alchemy.yml
@@ -5,7 +5,9 @@
   text: "/ServerInfo/_CP14/Guidebook_EN/Alchemy.xml"
   children:
   - CP14_EN_BasicAlchemy
-  - CP14_EN_Biological
+  - CP14_EN_Organic
+  - CP14_EN_Inorganic
+  - CP14_EN_Arcane
   filterEnabled: True
 
 - type: guideEntry
@@ -17,9 +19,23 @@
 
 - type: guideEntry
   crystallPunkAllowed: true
-  id: CP14_EN_Biological
-  name: Biological solutions
-  text: "/ServerInfo/_CP14/Guidebook_EN/AlchemyTabs/Biological.xml"
+  id: CP14_EN_Organic
+  name: Organic solutions
+  text: "/ServerInfo/_CP14/Guidebook_EN/AlchemyTabs/Organic.xml"
+  filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_EN_Inorganic
+  name: Inorganic solutions
+  text: "/ServerInfo/_CP14/Guidebook_EN/AlchemyTabs/Inorganic.xml"
+  filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_EN_Arcane
+  name: Alchemized solutions
+  text: "/ServerInfo/_CP14/Guidebook_EN/AlchemyTabs/Arcane.xml"
   filterEnabled: True
 
 - type: guideEntry
