--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/bloodflower.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/bloodflower.yml
@@ -1,23 +1,5 @@
 # Idea:
-# BloodFlower is a special reagent that can yield different base reagents, depending on the type of blood it is mixed with.
-
-# Red color dye
-
-- type: reaction
-  id: CP14BloodFlowerBrewing
-  impact: Low
-  minTemp: 500
-  priority: 1
-  quantized: true
-  conserveEnergy: false
-  reactants:
-    CP14BloodFlowerSap:
-      amount: 10
-  effects:
-  - !type:CP14AffectSolutionTemperature
-    addTemperature: -250
-  - !type:CreateEntityReactionEffect
-      entity: CP14DyeRed
+# BloodFlower is a special reagent that can react with essence to create simple solutions
 
 # Splitting
 
@@ -38,80 +20,98 @@
   - CP14BasicEffectDamageCold: 0.5
   - CP14BasicEffectDrunk: 0.5
 
-#  Blood brewing
+#  Flower brewing
 
 - type: reaction
-  id: CP14BloodFlowerBrewingBloodHuman
-  minTemp: 500
+  id: CP14BloodFlowerBrewingRestoration
+  minTemp: 474
   priority: 2
   reactants:
-    CP14Blood:
+    CP14SaltedWater:
       amount: 0.5
     CP14BloodFlowerSap:
       amount: 0.5
-    CP14GroundQuartz:
-      amount: 0.5
   products:
-    CP14BasicEffectEmpty: 0.75
-    CP14BasicEffectBloodRestore: 0.5
-    CP14BasicEffectHealBrute: 0.25
+    CP14BasicEffectImpurity: 0.75
+    CP14BasicEffectBloodRestore: 0.25
   effects:
   - !type:CP14AffectSolutionTemperature
-    addTemperature: -250
+    addTemperature: -119
+
+#  Essence brewing
 
 - type: reaction
-  id: CP14BloodFlowerBrewingBloodTiefling
-  minTemp: 500
+  id: CP14BloodFlowerBrewingEssenceHuman
+  minTemp: 560
   priority: 2
   reactants:
-    CP14BloodTiefling:
+    CP14Essence:
       amount: 0.5
     CP14BloodFlowerSap:
       amount: 0.5
-    CP14GroundQuartz:
-      amount: 0.5
+    CP14AlchemistSalt:
+      amount: 0.25
   products:
-    CP14BasicEffectEmpty: 0.75
-    CP14BasicEffectBloodRestore: 0.5
-    CP14BasicEffectHealCold: 0.25
+    CP14BasicEffectHealBrute: 0.50
+    CP14BasicEffectImpurity: 0.5
+    CP14BasicEffectBloodRestore: 0.25
   effects:
   - !type:CP14AffectSolutionTemperature
-    addTemperature: -250
+    addTemperature: -200
 
 - type: reaction
-  id: CP14BloodFlowerBrewingBloodElf
-  minTemp: 500
+  id: CP14BloodFlowerBrewingEssenceTiefling
+  minTemp: 620
   priority: 2
   reactants:
-    CP14BloodElf:
+    CP14EssenceTiefling:
       amount: 0.5
     CP14BloodFlowerSap:
       amount: 0.5
-    CP14GroundQuartz:
-      amount: 0.5
+    CP14AlchemistSalt:
+      amount: 0.25
   products:
-    CP14BasicEffectEmpty: 0.75
-    CP14BasicEffectBloodRestore: 0.5
-    CP14BasicEffectHealPoison: 0.25
+    CP14BasicEffectImpurity: 0.75
+    CP14BasicEffectHealCold: 0.5
+    CP14BasicEffectHealHeat: 0.25
   effects:
   - !type:CP14AffectSolutionTemperature
-    addTemperature: -250
+    addTemperature: -270
 
 - type: reaction
-  id: CP14BloodFlowerBrewingBloodGoblin
-  minTemp: 500
+  id: CP14BloodFlowerBrewingEssenceElf
+  minTemp: 560
   priority: 2
   reactants:
-    CP14BloodGoblin:
+    CP14EssenceElf:
       amount: 0.5
     CP14BloodFlowerSap:
       amount: 0.5
-    CP14GroundQuartz:
-      amount: 0.5
+    CP14AlchemistSalt:
+      amount: 0.25
   products:
-    CP14BasicEffectEmpty: 0.75
-    CP14BasicEffectRainbow: 0.25
-    CP14BasicEffectVomit: 0.25
+    CP14BasicEffectImpurity: 0.75
+    CP14BasicEffectHealPoison: 0.5
+    CP14BasicEffectHealMana: 0.25
   effects:
   - !type:CP14AffectSolutionTemperature
-    addTemperature: -250
+    addTemperature: -200
+
+- type: reaction
+  id: CP14BloodFlowerBrewingEssenceGoblin
+  minTemp: 520
+  priority: 2
+  reactants:
+    CP14EssenceGoblin:
+      amount: 0.5
+    CP14BloodFlowerSap:
+      amount: 0.5
+    CP14AlchemistSalt:
+      amount: 0.25
+  products:
+    CP14BasicEffectDamagePoison: 0.75
+    CP14BasicEffectImpurity: 0.5
+    CP14BasicEffectSpeedUp: 0.25
+  effects:
+  - !type:CP14AffectSolutionTemperature
+    addTemperature: -160
