--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
@@ -13,7 +13,7 @@
     CP14ChromiumSlime:
       amount: 1
   products:
-    CP14BasicEffectEmpty: 1
+    CP14BasicEffectSimpleBase: 1
   effects:
   - !type:CP14InverseEffect
     inversion:
@@ -42,9 +42,9 @@
       CP14BasicEffectDamageAirloss: CP14BasicEffectHealAirloss
       CP14BasicEffectHealAirloss: CP14BasicEffectDamageAirloss
       #
-      #CP14BasicEffectRainbow: 
-      #CP14BasicEffectEmoteCough:
-
+    # CP14BasicEffectRainbow: 
+    # CP14BasicEffectEmoteCough:
+  
 # Simple brewing
 
 - type: reaction
