--- a/Resources/ConfigPresets/_CP14/Dev.toml
+++ b/Resources/ConfigPresets/_CP14/Dev.toml
@@ -1,5 +1,5 @@
 [whitelist]
-enabled = true
+enabled = false
 
 [log]
 path = "logs"
@@ -14,7 +14,7 @@ bindto = "::,0.0.0.0"
 max_connections = 100
 
 [game]
-hostname = "⚔️  CrystallEdge Alpha ⚔️  "
+hostname = "⚔️  CrystallEdge Alpha [ENG] ⚔️  "
 desc = "History of the City of Sword and Magic. A social economic sandbox reinventing the Space Station 14 concept in fantasy style"
 lobbyenabled = true
 soft_max_players = 40
