--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/dayflin.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/dayflin.yml
@@ -37,3 +37,4 @@
   - CP14BasicEffectDamageMana: 0.5
   - CP14BasicEffectHealCold: 0.5
   - CP14BasicEffectSatiateThirst: 0.5
+  - CP14BasicEffectDamageHeat: 0.5
