--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Furniture/closets.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Furniture/closets.yml
@@ -12,6 +12,7 @@
               amount: 4
             - material: CP14Nail
               amount: 2
+            - tool: CP14Hammering
               doAfter: 4
     - node: CP14WoodenCloset
-      entity: CP14WoodenCloset 
+      entity: CP14WoodenCloset
