--- a/Resources/Maps/_CP14/comoss.yml
+++ b/Resources/Maps/_CP14/comoss.yml
@@ -1,6 +1,17 @@
 meta:
-  format: 6
-  postmapinit: false
+  format: 7
+  category: Map
+  engineVersion: 247.0.0
+  forkId: ""
+  forkVersion: ""
+  time: 02/22/2025 14:14:57
+  entityCount: 15064
+maps:
+- 1
+grids:
+- 2
+orphans: []
+nullspace: []
 tilemap:
   0: Space
   9: CP14FloorBase
@@ -78,16 +89,15 @@ entities:
       - visuals: CP14Rain
       - visuals: CP14Storm
     - type: CP14MapDamage
-    - type: LoadedMap
     - type: Parallax
       parallax: CP14Ocean
   - uid: 2
     components:
     - type: MetaData
       name: grid
-    - type: Roof
     - type: Transform
       parent: 1
+    - type: Roof
     - type: BecomesStation
       id: Comoss
     - type: MapGrid
@@ -3012,192 +3022,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 22.5,15.5
       parent: 2
-- proto: CP14Arrow
-  entities:
-  - uid: 9892
-    components:
-    - type: Transform
-      parent: 17927
-    - type: Physics
-      canCollide: False
-  - uid: 9893
-    components:
-    - type: Transform
-      parent: 17927
-    - type: Physics
-      canCollide: False
-  - uid: 9894
-    components:
-    - type: Transform
-      parent: 17927
-    - type: Physics
-      canCollide: False
-  - uid: 9895
-    components:
-    - type: Transform
-      parent: 17927
-    - type: Physics
-      canCollide: False
-  - uid: 9896
-    components:
-    - type: Transform
-      parent: 17927
-    - type: Physics
-      canCollide: False
-  - uid: 9903
-    components:
-    - type: Transform
-      parent: 17927
-    - type: Physics
-      canCollide: False
-  - uid: 9904
-    components:
-    - type: Transform
-      parent: 17927
-    - type: Physics
-      canCollide: False
-  - uid: 9905
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9906
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9907
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9908
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9909
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9910
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9911
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9917
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9918
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 9919
-    components:
-    - type: Transform
-      parent: 17928
-    - type: Physics
-      canCollide: False
-  - uid: 13955
-    components:
-    - type: Transform
-      pos: -0.8673811,-17.455278
-      parent: 2
-  - uid: 13957
-    components:
-    - type: Transform
-      pos: -1.9140058,-15.633688
-      parent: 2
-  - uid: 13964
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13965
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13966
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13967
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13968
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13969
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13970
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13971
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13972
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13973
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13974
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
-  - uid: 13975
-    components:
-    - type: Transform
-      parent: 13960
-    - type: Physics
-      canCollide: False
 - proto: CP14BankStorageMarker
   entities:
   - uid: 2252
@@ -3680,11 +3504,6 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -74.5,-71.5
-      parent: 2
-  - uid: 9948
-    components:
-    - type: Transform
-      pos: -124.5,21.5
       parent: 2
   - uid: 10731
     components:
@@ -43342,6 +43161,12 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -19.5,24.5
       parent: 2
+  - uid: 1385
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -18.5,28.5
+      parent: 2
   - uid: 1710
     components:
     - type: Transform
@@ -44613,7 +44438,7 @@ entities:
     - type: Transform
       pos: 15.227463,0.65288126
       parent: 2
-- proto: CP14Crossbolt
+- proto: CP14CrossboltIron
   entities:
   - uid: 2062
     components:
@@ -45933,18 +45758,6 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 20.5,13.5
-      parent: 2
-  - uid: 6692
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -6.5,1.5
-      parent: 2
-  - uid: 8411
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -6.5,0.5
       parent: 2
   - uid: 8785
     components:
@@ -48429,6 +48242,12 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 43.5,-16.5
       parent: 2
+  - uid: 8640
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 12.5,3.5
+      parent: 2
   - uid: 12650
     components:
     - type: Transform
@@ -48750,11 +48569,6 @@ entities:
     - type: Transform
       pos: 22.5,29.5
       parent: 2
-  - uid: 956
-    components:
-    - type: Transform
-      pos: 22.5,21.5
-      parent: 2
   - uid: 989
     components:
     - type: Transform
@@ -48764,6 +48578,12 @@ entities:
     components:
     - type: Transform
       pos: 9.5,23.5
+      parent: 2
+  - uid: 1759
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 23.5,21.5
       parent: 2
   - uid: 1850
     components:
@@ -49075,6 +48895,192 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 26.58823,1.9156308
       parent: 2
+- proto: CP14ModularIronArrow
+  entities:
+  - uid: 9892
+    components:
+    - type: Transform
+      parent: 17927
+    - type: Physics
+      canCollide: False
+  - uid: 9893
+    components:
+    - type: Transform
+      parent: 17927
+    - type: Physics
+      canCollide: False
+  - uid: 9894
+    components:
+    - type: Transform
+      parent: 17927
+    - type: Physics
+      canCollide: False
+  - uid: 9895
+    components:
+    - type: Transform
+      parent: 17927
+    - type: Physics
+      canCollide: False
+  - uid: 9896
+    components:
+    - type: Transform
+      parent: 17927
+    - type: Physics
+      canCollide: False
+  - uid: 9903
+    components:
+    - type: Transform
+      parent: 17927
+    - type: Physics
+      canCollide: False
+  - uid: 9904
+    components:
+    - type: Transform
+      parent: 17927
+    - type: Physics
+      canCollide: False
+  - uid: 9905
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9906
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9907
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9908
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9909
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9910
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9911
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9917
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9918
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 9919
+    components:
+    - type: Transform
+      parent: 17928
+    - type: Physics
+      canCollide: False
+  - uid: 13955
+    components:
+    - type: Transform
+      pos: -0.8673811,-17.455278
+      parent: 2
+  - uid: 13957
+    components:
+    - type: Transform
+      pos: -1.9140058,-15.633688
+      parent: 2
+  - uid: 13964
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13965
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13966
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13967
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13968
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13969
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13970
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13971
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13972
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13973
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13974
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
+  - uid: 13975
+    components:
+    - type: Transform
+      parent: 13960
+    - type: Physics
+      canCollide: False
 - proto: CP14ModularIronAxe
   entities:
   - uid: 10134
@@ -68162,12 +68168,6 @@ entities:
     - type: Transform
       pos: -3.5,-32.5
       parent: 2
-  - uid: 1385
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -6.5,1.5
-      parent: 2
   - uid: 1419
     components:
     - type: Transform
@@ -68220,18 +68220,6 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 12.5,-28.5
-      parent: 2
-  - uid: 1961
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -6.5,0.5
-      parent: 2
-  - uid: 1963
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -6.5,0.5
       parent: 2
   - uid: 2060
     components:
@@ -70387,72 +70375,11 @@ entities:
       fixtures: {}
 - proto: CP14WallmountLamp
   entities:
-  - uid: 1707
-    components:
-    - type: Transform
-      pos: 12.5,-14.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
-  - uid: 1759
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 12.5,-20.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
-  - uid: 1793
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 17.5,-19.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
-  - uid: 1840
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 17.5,-15.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
-  - uid: 7163
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 22.5,-25.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
-  - uid: 7215
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 19.5,-18.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
-  - uid: 8629
-    components:
-    - type: Transform
-      pos: 14.5,-26.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
-  - uid: 8640
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 11.5,-29.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
   - uid: 8642
     components:
     - type: Transform
-      pos: 17.5,-22.5
+      rot: -1.5707963267948966 rad
+      pos: 22.5,-30.5
       parent: 2
     - type: Fixtures
       fixtures: {}
@@ -70941,10 +70868,79 @@ entities:
       parent: 2
     - type: Fixtures
       fixtures: {}
+  - uid: 1793
+    components:
+    - type: Transform
+      pos: 12.5,-14.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 1840
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 12.5,-20.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 1961
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 17.5,-19.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 1963
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 17.5,-15.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 2155
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 22.5,-25.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 5493
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 19.5,-18.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
   - uid: 5546
     components:
     - type: Transform
       pos: -8.5,-16.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 6692
+    components:
+    - type: Transform
+      pos: 14.5,-26.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 7163
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 11.5,-29.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 7215
+    components:
+    - type: Transform
+      pos: 17.5,-22.5
       parent: 2
     - type: Fixtures
       fixtures: {}
@@ -83581,6 +83577,11 @@ entities:
     - type: Transform
       pos: 15.5,21.5
       parent: 2
+  - uid: 956
+    components:
+    - type: Transform
+      pos: -6.5,0.5
+      parent: 2
   - uid: 961
     components:
     - type: Transform
@@ -84033,6 +84034,11 @@ entities:
     components:
     - type: Transform
       pos: 8.5,-29.5
+      parent: 2
+  - uid: 1707
+    components:
+    - type: Transform
+      pos: -6.5,1.5
       parent: 2
   - uid: 1711
     components:
@@ -86340,11 +86346,6 @@ entities:
     - type: Transform
       pos: 7.5,-41.5
       parent: 2
-  - uid: 5493
-    components:
-    - type: Transform
-      pos: 12.5,5.5
-      parent: 2
   - uid: 5509
     components:
     - type: Transform
@@ -86577,11 +86578,11 @@ entities:
       parent: 2
 - proto: CP14WoodenCabinetAlchemist
   entities:
-  - uid: 2155
+  - uid: 8411
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
-      pos: 12.5,4.5
+      pos: 12.5,5.5
       parent: 2
   - uid: 14861
     components:
@@ -86767,11 +86768,11 @@ entities:
       parent: 2
 - proto: CP14WoodenClosetAlchemyFilled
   entities:
-  - uid: 12052
+  - uid: 8629
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
-      pos: 12.5,3.5
+      pos: 12.5,4.5
       parent: 2
   - uid: 14862
     components:
@@ -87418,7 +87419,7 @@ entities:
   - uid: 13952
     components:
     - type: Transform
-      pos: -6.193482,1.8160825
+      pos: -8.50448,1.1592681
       parent: 2
   - uid: 13953
     components:
@@ -87448,16 +87449,6 @@ entities:
     components:
     - type: Transform
       pos: 19.349468,-26.151648
-      parent: 2
-- proto: PlushieLizardInversed
-  entities:
-  - uid: 15036
-    components:
-    - type: MetaData
-      desc: oooo you like mapping. ur a mapper
-      name: Viator
-    - type: Transform
-      pos: -124.5,21.5
       parent: 2
 - proto: SpawnPointLatejoin
   entities:
