--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -229,7 +229,6 @@
   - CP14ClothingPantsTrouserWhite
   - CP14ClothingPantsTrouserDarkBlue
   - CP14ClothingPantsAristocratic
-  - CP14ClothingPantsLoincloth
   - CP14ClothingPantsGreen
   - CP14ClothingPantsBrown
   
@@ -248,11 +247,6 @@
   id: CP14ClothingPantsAristocratic
   equipment:
     pants: CP14ClothingPantsAristocratic
-
-- type: loadout
-  id: CP14ClothingPantsLoincloth
-  equipment:
-    pants: CP14ClothingPantsLoincloth
 
 - type: loadout
   id: CP14ClothingPantsGreen
@@ -293,6 +287,7 @@
   - CP14ClothingShirtCottonYellow
   - CP14ClothingShirtCottonYellowCollar
   - CP14ClothingCottonYellowCollarDress
+  - CP14ClothinWarriorsGarbDress
   
 
 - type: loadout
@@ -410,6 +405,11 @@
   equipment:
     shirt: CP14ClothingCottonYellowCollarDress
 
+- type: loadout
+  id: CP14ClothinWarriorsGarbDress
+  equipment:
+    shirt: CP14ClothinWarriorsGarbDress
+    
 # Shoes
 
 - type: loadoutGroup
