--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Dimension/T1_shadow_grab.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Dimension/T1_shadow_grab.yml
@@ -9,7 +9,7 @@
   - type: CP14MagicEffectManaCost
     manaCost: 10
   - type: CP14MagicEffect
-    magicType: Darkness
+    magicType: Dimension
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
@@ -52,7 +52,7 @@
       color: "#5e427e"
 
 - type: entity
-  parent: CP14BaseSpellScrollDarkness
+  parent: CP14BaseSpellScrollDimension
   id: CP14SpellScrollShadowGrab
   name: shadow grab spell scroll
   components:
