--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Dimension/T2_shadow_step.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Dimension/T2_shadow_step.yml
@@ -11,7 +11,7 @@
   - type: CP14MagicEffectManaCost
     manaCost: 20
   - type: CP14MagicEffect
-    magicType: Darkness
+    magicType: Dimension
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
@@ -45,7 +45,7 @@
       color: "#5e427e"
 
 - type: entity
-  parent: CP14BaseSpellScrollDarkness
+  parent: CP14BaseSpellScrollDimension
   id: CP14SpellScrollShadowStep
   name: shadow step spell scroll
   components:
