--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -260,6 +260,9 @@ CP14ClothingBeltQuiverArrow: CP14ClothingBeltQuiverIronArrow
 #2025-17-02
 CP14Crossbolt: CP14CrossboltIron
 
+#2025-24-02
+CP14ClothingOuterClothingCuirass: CP14ArmorIronCuirass
+
 
 # <---> CrystallEdge migration zone end
 
